@@ -34,6 +34,7 @@ public class CommandActionListener implements ActionListener
     
     private static final String cmdReplace          = "Search&Replace";
     private static final String cmdDiff             = "Compare (Diff)";
+    private static final String cmdSmartVersions    = "Smart Path Versioning";
     private static final String cmdPSEditor         = "Edit Prescales";
     private static final String cmdSPSEditor         = "Edit SmartPrescales";
     private static final String cmdMLEditor         = "Edit MessageLogger";
@@ -76,6 +77,7 @@ public class CommandActionListener implements ActionListener
 	
 	if (command.equals(cmdReplace))          app.searchAndReplace();
 	if (command.equals(cmdDiff))             app.diffConfigurations();
+	if (command.equals(cmdSmartVersions))    app.smartVersionsConfigurations();
 	if (command.equals(cmdPSEditor))         app.openPrescaleEditor();
 	if (command.equals(cmdSPSEditor))         app.openSmartPrescaleEditor();
 	if (command.equals(cmdMLEditor))         app.openMessageLoggerEditor();
